[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pybooks"
version = "0.0.1"
authors = [
    {name="Luke Shaffer", email="lukeshaffer123@gmail.com"}
]
description = "A general purpose accounting / ledger system"
requires-python = ">3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[dependency-groups]
dev = [
    "pytest>=7.0.1",
]
